# mindbot

ai-service/: .gitignore  audio.webm  config.yaml  main.py  pyproject.toml  requirements.txt  test_api.py  test_voice.py
ai-service/app/: __init__.py
ai-service/app/agent/: __init__.py  graph.py  state.py
ai-service/app/api/: __init__.py  chat_router.py  rag_router.py  voice_router.py
ai-service/app/core/: __init__.py  config_loader.py  llm_factory.py
ai-service/app/rag/: __init__.py  document_processor.py  faiss_store.py
ai-service/app/tools/: __init__.py  calculator.py  calendar_api.py  python_repl.py  web_search.py
api/: pom.xml
api/src/main/java/com/mindbot/api/: ApiApplication.java
api/src/main/java/com/mindbot/api/config/: AppConfig.java
api/src/main/java/com/mindbot/api/controller/: ChatController.java  DocumentController.java  VoiceController.java
api/src/main/java/com/mindbot/api/dto/: AiChatRequest.java  ChatRequest.java  ChatResponse.java
api/src/main/java/com/mindbot/api/entity/: Chat.java  KnowledgeBaseDocument.java  Message.java  User.java
api/src/main/java/com/mindbot/api/repository/: ChatRepository.java  (+3 more)
api/src/main/resources/: application.properties
api/src/test/java/com/mindbot/api/: ApiApplicationTests.java
client/: next.config.ts  package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/chat/[[...id]]/: page.tsx
client/app/login/: page.tsx
client/components/: AuthProvider.tsx  RagDropzone.tsx  Sidebar.tsx  ThemeRegistry.tsx  ToolStatus.tsx
client/lib/: supabase.ts
